tdf#93329 : Fixes FTest algorithmic bug

Also added tests for FTEST() with reference results from Octave that
covers a reasonable range of variance ratios.

References :

1) Octave-Forge : https://sourceforge.net/p/octave/statistics/ci/default/tree/inst/vartest2.m
   with head = f8f3ede1f4e9576f0e05700d7bed0b3f2753e9c5

2) R-project : https://github.com/wch/r-source/blob/trunk/src/library/stats/R/var.test.R
   From read-only mirror of R source code from https://svn.r-project.org/R/, updated hourly.
   branch : "trunk", head = d48a3960875fa373e1e68286245ee8e1bc7ac0fd

Change-Id: Icc843be3a1497e4d69e8b39b31c4b6998594dfe9